# idaptik-rescript13-staging

./: .containerignore  .editorconfig  .gitattributes  .gitignore  .guix-channel  0-AI-MANIFEST.a2ml  CLAUDE.md  CONTRIBUTING.adoc  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  RESCRIPT-13-MIGRATION-PLAN.md  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  contractile.just  deno.json  flake.nix  guix.scm  index.html  llm-warmup-dev.md  llm-warmup-user.md  package.json  podman-compose.yml  rescript.json  setup.sh  stapeln.toml  start-dev.sh  start-game-only.sh  vite.config.js  wokelangiser.toml
.clusterfuzzlite/: Containerfile  build.sh  project.yaml
.github/: CODEOWNERS  dependabot.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  INTENT.contractile  MUST.contractile  (+1 more)
idaptik-developers/src/escape-hatch/: Cargo.toml
idaptik-developers/src/escape-hatch/src/: app.rs  main.rs  ui.rs
idaptik-ums/: ABI-FFI-README.md  Cargo.toml  TOPOLOGY.md  deno.json  gossamer.conf.json  idaptik-ums.ipkg  index.html  rescript.json
idaptik-ums/docs/design/: GAME-INTEGRATION.md  PROVEN-INTEGRATION.md
idaptik-ums/ffi/zig/: build.zig  build.zig.zon
idaptik-ums/ffi/zig/src/: main.zig  types.zig  validate.zig
idaptik-ums/ffi/zig/test/: integration_test.zig
idaptik-ums/src/: App.res
idaptik-ums/src-gossamer/: main.rs
idaptik-ums/src/abi/: Assassin.idr  Devices.idr  Dogs.idr  Drones.idr  Guards.idr  Inventory.idr  Level.idr  Mission.idr  Physical.idr  Primitives.idr  ProvenBridge.idr  Types.idr  Validation.idr  Wiring.idr  Zones.idr
idaptik-ums/src/editor/: Editor.res  EditorCanvas.res  EditorCmd.res  EditorEngine.res  EditorModel.res  EditorProperties.res  EditorToolbar.res  EditorValidation.res
idaptik-ums/test-data/: invalid-level.json  sample-level.json
(+354 files in other folders)
